--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,93 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap');
+
+ .containerr{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    opacity: 1;
+     /* display: none;  */
+    transition: all 1500ms ease-in-out;
+    justify-content: center;
+    align-items: center;
+    -webkit-box-reflect: below 20px linear-gradient(#0001, #0004);
+  }
+  
+  .hide{
+      opacity: 0;
+      transition: all 1500ms ease-in-out;
+  }
+
+  .containerr .loader{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background: #000;
+    animation: animate 2s linear infinite;
+  }
+  @keyframes animate{
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(360deg);
+    }
+  }
+  .containerr .loader::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(to top, transparent, rgba(0,255,249,0.4));
+    background-size: 100px 180px;
+    background-repeat: no-repeat;
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+  }
+  .containerr .loader::after{
+    content:'';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 20px;
+    height: 20px;
+    background: #00fff9;
+    border-radius: 50%;
+    z-index: 10;
+    box-shadow: 0 0 10px #00fff9,
+      0 0 20px #00fff9,
+      0 0 30px #00fff9,
+      0 0 40px #00fff9,
+      0 0 50px #00fff9,
+      0 0 60px #00fff9,
+      0 0 70px #00fff9,
+      0 0 80px #00fff9,
+      0 0 90px #00fff9,
+      0 0 100px #00fff9,
+      0 0 110px #00fff9,
+      0 0 120px #00fff9,
+      0 0 130px #00fff9,
+      0 0 140px #00fff9,
+      0 0 150px #00fff9,
+      0 0 160px #00fff9,
+      0 0 170px #00fff9,
+      0 0 180px #00fff9,
+      0 0 190px #00fff9,
+      0 0 200px #00fff9;
+  }
+  .containerr .loader span{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    background: #000;
+    border-radius: 50%;
+  } 
