--- a/src/App.css
+++ b/src/App.css
@@ -150,3 +150,36 @@
   .btn:hover {
     
   }
+
+
+
+
+
+.progress{
+  width: 100%;
+  
+}
+.progress .c70{
+ width: 0;
+  animation:s70 2s linear forwards;
+}
+.progress .c80{
+  width: 0;
+   animation:s80 2s linear forwards;
+ }
+  @keyframes s80{
+    0%{
+      width: 0;
+    }
+    100%{
+      width: 80%;
+    }
+  }
+  @keyframes s70{
+    0%{
+      width: 0;
+    }
+    100%{
+      width: 70%;
+    }
+  }
