--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,62 @@
     background: #000;
     border-radius: 50%;
   } 
+
+
+
+
+  .btn {
+    width: 95%;
+    font-family: 'Cinzel', serif;
+    font-size: 20px;
+    border: 1px solid var(--primary-color);
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 0;
+    transition: 1s;
+  }
+  
+  .btn::before, .btn::after {
+    position: absolute;
+    background: black;
+    z-index: -1;
+    transition: 1s;
+    content: '';
+  }
+  
+  .btn::before {
+    height: 50%;
+    width: 101%;
+  }
+  
+  .btn::after {
+    width: 50%;
+    height: 101%;
+  }
+  
+  .btn img {
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
+  }
+  
+  .btn:hover::before {
+    height: 0px;
+    
+  }
+  
+  .btn:hover::after {
+    width: 0px;
+   
+  }
+  
+  .btn:hover {
+    
+  }
